--- a/estilo.css
+++ b/estilo.css
@@ -27,16 +27,26 @@ header{
     position: relative;
 }
 
+article{
+    display: inline-block;
+    margin: 5px;
+    background: #E9967A;
+    width: 97%;
+    padding: 10px;
+}
+
+img{
+    float: left;
+}
+
+
 footer{
+    display: inline-block;
     background: black;
-    position: absolute;
-    right: 0;
-    left: 0;
-    bottom: 0;
     color: white;
     opacity: .9;
     width: 100%;
-    height: 10%;
+    padding-bottom: 30px;
 }
 
 .mio{
