--- a/estilo.css
+++ b/estilo.css
@@ -11,11 +11,10 @@ nav{
     width: 100%;
     height: 35px;
     padding-top: 10px;
-    margin-bottom: 40px;
-    font-family: "Comic Sans MS", cursive, sans-serif;
+    font-family: "Comic Sans MS", cursive, sans-serif;   
 }
 
-a{
+.principal{
     color: wheat;
     text-decoration: none;
     padding: 17px;
@@ -23,7 +22,7 @@ a{
 
 }
 
-a:hover{
+.principal:hover{
     color: gray;
     font-weight: bold;
     font-size: 18px;
@@ -51,11 +50,12 @@ article{
     margin: 5px;
     margin-bottom: 25px;
     margin-right: 10px;
-    background: #0b7570;
+    /*background: #0b7570;*/
     width: 60%;
     padding: 20px;
-    border-radius: 80px;
+    border-radius: 30px;
     box-shadow: 5px 10px 18px black;
+    background-image: linear-gradient(to bottom left,#17f1da, #0b7570);
 }
 
 img.tipo1{
@@ -75,9 +75,9 @@ aside{
     margin: 10px;
     text-align: left;
     padding: 20px;
-    border-radius: 40px;
+    border-radius: 17px;
     box-shadow: 5px 10px 18px black;
-    background-image: linear-gradient(to bottom right,#469f7b, paleturquoise);
+    background-image: linear-gradient(to bottom right,#b4ffcd, #60f191);
 }
 
 li{
@@ -86,9 +86,9 @@ li{
 }
 
 li:hover{
-    color: yellow;
+    color: #f1ac17;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 18px;
 }
 
 form{
@@ -99,10 +99,22 @@ input{
     margin: 15px;
 }
 
-input:focus{
+.asda:focus{
     border-radius: 8px;
     border-color: #27a8ee;
     border-style: double;
+}
+.boto{
+    border-radius: 4px;
+    box-shadow: 1px 1px 5px #27a8ee;
+}
+.boto:hover{
+    border-color: #27a8ee;
+    border-style: double;
+}
+
+.boto:active{
+    border-color:#0b7570;
 }
 
 footer{
@@ -120,4 +132,29 @@ footer{
     font-size: 15px;
     margin: 10px;   
 }
+
+.cuadro{
+    width: 25px;
+    height: 25px;
+    background: #1a2928;
+    transition: width 5s;
+
+}
+
+.icono{
+    width: 25px;
+    height: 25px;
+}
+
+.cuadro:hover{
+    transform: rotate(40deg);
+    background: #f1ac17;
+}
+
+
+
+
+
+
+
 
